--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@ body {
   max-width: var(--container-width);
   width: 100%;
   margin: 0 auto;
-
 }
 .navbar {
   display: flex;
@@ -36,10 +35,9 @@ body {
   background-color: var(--purple-100);
   border-radius: 39px;
   padding: 15px 12px;
-}
-.navbar {
   margin-bottom: 35px;
 }
+
 .balans {
   display: flex;
   align-items: center;
@@ -158,7 +156,6 @@ color: var(--purple-900);
   border: 15px solid var(--purple-400);
   border-radius: 50%;  
 }
-  
 .graphic-right {
   max-width: 630px;
   width: 100%;
@@ -170,4 +167,57 @@ color: var(--purple-900);
 }
 .diagram {
   position: absolute;
+}
+.page-content {
+  max-width: 1440px;
+  display: flex;
+  gap: 13px; 
+  margin-top: 13px;
+}
+.aside {
+  background-color: #ae34cd;
+  border-radius: 39px;
+  max-width: 392px;
+}
+.aside__menu {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 100%;
+ 
+}
+.navbar-secondary {
+  display: flex;
+  margin-top: 65px;
+  padding: 0 65px;
+  flex-direction: column;
+  gap: 70px;
+}
+.navbar-secondary__menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar-secondary__txt {
+  font-size: 30px;
+line-height: 36px;
+color: #FFFFFF;
+}
+.link-background {
+  background-image: url(../assets/backgound_market.svg);
+}
+.link-txt {
+  font-size: 35px;
+}
+.theme {
+  display: flex;
+  align-items: center;
+  margin-left: 40px;
+  padding-top: 45px;
+}
+.theme__logo {
+  position: absolute;
+}
+.theme__switch {
+  padding-left: 25px;
 }
