--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
   --white: #ffffff;
   /* container sizes */
   --container-width: 1048px;
-
 }
 /* resets */
 * {
@@ -21,7 +20,7 @@ ul {
 }
 body {
   font-family: "Inter", sans-serif;
-  background-color: #F5ECEC;
+  background-color: #f5ecec;
 }
 .container {
   max-width: var(--container-width);
@@ -37,18 +36,27 @@ body {
   padding: 15px 12px;
   margin-bottom: 35px;
 }
-
 .balans {
   display: flex;
   align-items: center;
   gap: 18px;
-  
 }
 .balans_sum {
-font-weight: 800;
-font-size: 60px;
-line-height: 73px;
-color: var(--purple-900);
+  font-weight: 800;
+  font-size: 60px;
+  line-height: 73px;
+  color: var(--purple-900);
+}
+.total {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.balans__txt {
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 24px;
+  color: #ffffff;
 }
 .wallet {
   display: flex;
@@ -58,9 +66,9 @@ color: var(--purple-900);
 }
 .wallet__txt {
   font-weight: 800;
-font-size: 60px;
-line-height: 73px;
-color: var(--purple-900);
+  font-size: 60px;
+  line-height: 73px;
+  color: var(--purple-900);
 }
 .graphics {
   display: flex;
@@ -69,7 +77,6 @@ color: var(--purple-900);
   background-color: var(--purple-100);
   border-radius: 39px;
   padding: 37px 55px 63px 64px;
-  gap: 47px;
   margin-bottom: 36px;
 }
 .graphics__item1 {
@@ -145,7 +152,6 @@ color: var(--purple-900);
   padding: 15px 85px 14px 50px;
   align-items: center;
   justify-content: center;
-
 }
 .graphic-left__diagram {
   width: 235px;
@@ -154,7 +160,7 @@ color: var(--purple-900);
   align-items: center;
   justify-content: center;
   border: 15px solid var(--purple-400);
-  border-radius: 50%;  
+  border-radius: 50%;
 }
 .graphic-right {
   max-width: 630px;
@@ -169,9 +175,9 @@ color: var(--purple-900);
   position: absolute;
 }
 .page-content {
-  max-width: 1440px;
+  /* max-width: 1440px; */
   display: flex;
-  gap: 13px; 
+  gap: 13px;
   margin-top: 13px;
 }
 .aside {
@@ -184,7 +190,6 @@ color: var(--purple-900);
   flex-direction: column;
   margin: 0 auto;
   width: 100%;
- 
 }
 .navbar-secondary {
   display: flex;
@@ -200,23 +205,24 @@ color: var(--purple-900);
 }
 .navbar-secondary__txt {
   font-size: 30px;
-line-height: 36px;
-color: #FFFFFF;
+  line-height: 36px;
+  color: #ffffff;
 }
 .link-background {
+  width: 100%;
   background-image: url(../assets/backgound_market.svg);
 }
 .link-txt {
   font-size: 35px;
 }
 .theme {
-  display: flex;
-  align-items: center;
-  margin-left: 40px;
-  padding-top: 45px;
+  padding: 45px 30px;
 }
 .theme__logo {
-  position: absolute;
+  display: flex;
+  align-items: center;
+  background-image: url(../assets/Sun_rectangle.svg);
+  background-repeat: no-repeat;
 }
 .theme__switch {
   padding-left: 25px;
